<resources>
    <string name="app_name">Kitesurfing Android Project</string>
    <string name="base_url">https://internship-2019.herokuapp.com</string>
    <string name="user_get">api-user-get</string>
    <string name="spot_get_all">api-spot-get-all</string>
    <string name="spot_get_details">api-spot-get-details</string>
    <string name="spot_get_countries">api-spot-get-countries</string>
    <string name="spot_favorites_add">api-spot-favorites-add</string>
    <string name="spot_favorites_remove">api-spot-favorites-remove</string>

    <string name="valid_email">andrei.popa2199@gmail.com</string>
    <string name="filter_country_edit_text_title">Country: </string>
    <string name="filter_country_edit_text_hint">Type name of country</string>
    <string name="filter_wind_probability_edit_text_title">Wind Probability:</string>
    <string name="filter_wind_probability_edit_text_hint">Type value of wind probability</string>
    <string name="filter_apply_button_text">Apply</string>
    <string name="no_internet_connection_text">No Internet Connection</string>
    <string name="country_edit_text_header">Country:</string>
    <string name="wind_probability_edit_text_header">Wind Probability:</string>
    <string name="detail_name_header">Name:</string>
    <string name="detail_when_to_go_header">When to go:</string>
    <string name="detail_longitude_header">Longitude:</string>
    <string name="detail_latitude_header">Latitude:</string>
    <string name="view_location_button_description">View Location</string>
    <string name="no_internet_connection_toast_text">No Internet Connection</string>
    <string name="error_opening_details_toast_text">Error opening Details</string>
    <string name="could_not_mark_unmark_toast_text">Error: Could not mark/unmark</string>
    <string name="no_filter_applied_toast_text">No filter applied</string>
    <string name="passed_empty_intent_to_detail_toast_text">Passed empty Intent to the DetailActivity</string>
    <string name="extras_do_not_follow_format_toast_text">The extras do not follow the specified format</string>
    <string name="intent_not_containing_spotid_error_text">Intent not containing spotId</string>
    <string name="intent_not_containing_spotlocation_error_text">Intent not containing spotLocation</string>
    <string name="intent_not_containing_spot_index_error_text">Intent not containing spot_index_in_main_list</string>
    <string name="problem_getting_spotid_saved_text">There is a problem getting the spotId from onSavedInstance</string>
    <string name="problem_getting_spot_location_error_text">There is a problem getting the spotLocation from onSavedInstance</string>
    <string name="problem_getting_spot_index_error_text">There is a problem getting the spotIndexInMainList from onSavedInstance</string>
    <string name="details_succesfully_received_toast_text">Details have been succesfully received</string>
    <string name="details_not_succesfully_received_toast_text">Details have not been succesfully received</string>
    <string name="added_to_favorites_toast_text">Added to favorites</string>
    <string name="removed_from_favorites_toast_text">Removed from favorites</string>
    <string name="null_intent_started_the_ativity_error_text">Null intent started the activity</string>

</resources>
